--- a/templates/rezzed/slides.html
+++ b/templates/rezzed/slides.html
@@ -246,7 +246,7 @@
 			color: white;
 			position: absolute;
 			bottom: 50px; right: 75px;
-			max-width: 1000px;
+			max-width: 800px;
 		}
 		.central-text h1 {
 			max-width: initial;
@@ -448,7 +448,7 @@
 	function endOfDay() {
 		if (day.toUpperCase() === 'SATURDAY') {
 			showOverlay("That's a wrap");
-			setEndText('Join us in September for EGX', 'Tickets available now');
+			setEndText('Join us in September for EGX', 'Tickets available now at egx.net');
 		} else {
 			showOverlay("That's all for now");
 			setEndText("We'll be back tomorrow at 12:00", '');
