Hide end of day text on kill

--- a/templates/rezzed/slides.html
+++ b/templates/rezzed/slides.html
@@ -498,7 +498,7 @@
 		hideNext();
 		hideLowerLeft();
 		hideLowerRight();
-		$('central-text').hide();
+		$('.central-text').hide();
 		if (!keep_background) setTimeout(hideBackground, 950);
 	}
 
